--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ssr-react-app",
-  "name": "Server-Side Rendering React App",
+  "short_name": "swipeat",
+  "name": "Swipeat",
   "icons": [
   ],
   "start_url": ".",
